apps/base/downloader/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: downloader
  labels:
    app: downloader
spec:
  selector:
    app: downloader
  ports:
    - name: http
      port: 80
      targetPort: 3000
