apps/base/downloader/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: downloader
  labels:
    app: downloader
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`downloader.${DOMAIN_EXTERNAL}`)
      kind: Rule
      services:
        - name: downloader
          port: http
  tls:
    secretName: ${CERT_SECRET_EXTERNAL}
